--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Cypress Main Tests
 
 on: [push]
 
@@ -13,6 +13,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          install: false
           build: npm run build
           start: npm start
