--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -10,10 +10,11 @@ jobs:
         uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests        
-      - name: Cypress tests
-        uses: ./
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
         with:
-          working-directory: src/frontend
+          project: ../src/frontend
           install: false
           build: npm run build
           start: npm start
+          
