--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -7,13 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        
+      - name: cd cypress
+        run: |
+          cd ${{ github.repository }}
+          cd src/frontend
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          path: ${{ github.repository }}
           install: false
           build: npm run build
           start: npm start
