--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -12,13 +12,9 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: cd cypress
-        run: |
-          cd ..
-          cd src/frontend
+      - uses: actions/checkout@v3
+        with:
+          path: ${{ github.repository }}
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
