--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -17,7 +17,7 @@ jobs:
           path: ${{ github.repository }}
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Config Go env
+      - name: Config Node env
         run: |
           cd ${{ github.repository }}
           cd src/frontend
