--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -11,8 +11,5 @@ jobs:
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v5 # use the explicit version number
-        with:
-          install: false
-          build: npm run build
-          start: npm start
+        uses: cypress-io/github-action@v2
+        timeout-minutes: 10
