--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:          
-          working-directory: src/frontend
+          working-directory: src/frontend/cypress
           # build: npm run build
           install: false
           start: npm start
