--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -14,6 +14,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:          
           working-directory: src/frontend/cypress
-          # build: npm run build
+          # build: npm run build2
           install: false
           start: npm start
