--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
+          install: false
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm i cypress@${{ matrix.cypress-version }}
