--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -1,28 +1,26 @@
-name: Node.js CI
+name: Checks
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    types: [synchronize, opened, reopened]
 
 jobs:
-  build:
+  checks:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [lts/-2, lts/-1]
-        cypress-version: [10, 11, 12]
-
+        node_version: [14.19.0]
+    container: cypress/base:${{ matrix.node_version }}
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          install: false
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm i cypress@${{ matrix.cypress-version }}
-      - run: npm run build --if-present
-      - run: npm test
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install examples dependencies
+        run: npm run install
+
+      - name: Tests
+        run: npm run test
