--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -27,7 +27,9 @@ jobs:
           fi
 
       - name: Install examples dependencies
-        run: npm run start
+        with:          
+          working-directory: src/frontend
+          run: npm run start
 
       - name: Tests
         run: npm run test
