--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd src/frontend
           if [ -e yarn.lock ]; then
           yarn install --frozen-lockfile
           elif [ -e package-lock.json ]; then
