--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --port 4004 --proxy-config proxy.config.json",
+    "pro:start": "ng serve --port 4004",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
