--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -7,7 +7,32 @@ on:
     types: [synchronize, opened, reopened]
 
 jobs:
-  checks:
+  source:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node_version: [14.19.0]
+    container: cypress/base:${{ matrix.node_version }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          cd src/frontend
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+
+      - name: Install examples dependencies
+        run: |
+          cd src/frontend
+          npm run start
+          
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
