--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -27,33 +27,14 @@ jobs:
           npm i
           fi
 
-      - name: Install examples dependencies
+      - name: run portal
         run: |
           cd src/frontend
-          npm run start
+          npm run start &
           
-  tests:
-    needs: [source]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node_version: [14.19.0]
-    container: cypress/base:${{ matrix.node_version }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: |
-          cd src/frontend
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
-
-      - name: Install examples dependencies
+      - name: test e2e
         run: |
           cd src/frontend
           npm run cypress:run
+          
+
