--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           cd src/frontend
           npm run start &
+          sleep 30
           
       - name: test e2e
         run: |
