--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,19 +1,38 @@
-name: Cypress Tests
+name: CNSI Portal E2E Test
 
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    types: [synchronize, opened, reopened]
 
 jobs:
-  cypress-run:
+  source:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node_version: [14.19.0]
+    container: cypress/base:${{ matrix.node_version }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
-        with:          
-          working-directory: src/frontend/cypress
-          # build: npm run build
-          install: false
-          start: npm start
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          cd src/frontend
+          if [ -e yarn.lock ]; then
+          yarn install --frozen-lockfile
+          elif [ -e package-lock.json ]; then
+          npm ci
+          else
+          npm i
+          fi
+      - name: run portal
+        run: |
+          cd src/frontend
+          npm run start &
+          sleep 30
+          
+      - name: test e2e
+        run: |
+          cd src/frontend
+          npm run cypress:run
