--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -31,6 +31,8 @@ jobs:
           cd src/frontend
           npm run start &
           sleep 30
+        with:
+          wait-on: http://localhost:4004
           
       - name: test e2e
         run: |
