--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -35,7 +35,8 @@ jobs:
       - name: open
         uses: cypress-io/github-action@v1
         with:
-          wait-on: http://localhost:4004
+          install: false
+          wait-on: 'http://localhost:4004'
           
       - name: test e2e
         run: |
