--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -37,6 +37,13 @@ jobs:
         with:
           install: false
           wait-on: 'http://localhost:4004'
+          record: true
+          parallel: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # Recommended: pass the GitHub token lets this action correctly
+          # determine the unique run id necessary to re-run the checks
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: test e2e
         run: |
