--- a/.github/workflows/cypress-main.yml
+++ b/.github/workflows/cypress-main.yml
@@ -33,19 +33,10 @@ jobs:
           npm run start &
           sleep 30
       - name: open
-        uses: cypress-io/github-action@v1
+        uses: cypress-io/github-action@v5
         with:
           install: false
-#           start: npm run start
-          wait-on: 'http://localhost:4004'
-          wait-on-timeout: 120
-          record: true
-          parallel: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          # Recommended: pass the GitHub token lets this action correctly
-          # determine the unique run id necessary to re-run the checks
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          env: host=api.dev.local,port=4004
           
       - name: test e2e
         run: |
